fixed invisible images in slick slider

--- a/simple/styles.less
+++ b/simple/styles.less
@@ -64,7 +64,7 @@ section {
 @media screen and (max-width: 768px) {
     div.wrapper div {
         width: 100%;
-        float: none;
+        // float: none;
     }
 
     section#hero .wrapper {
